[package]
name = "nmap-helper"
version = "0.1.1"
edition = "2024"
authors = ["Alec Gleason <alec@gleasons.pub>"]
license-file = "LICENSE"
keywords = ["security", "nmap", "parsing"]
description = "Some utilities for working with Nmap scan results (https://nmap.org)"
homepage = "https://github.com/net-shaper/nmap-helper"
repository = "https://github.com/net-shaper/nmap-helper"
readme = "README.md"
categories = ["command-line-utilities", "security", "parser-implementations"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.5"
serde_json = ">=1.0"
log = "0.4"
env_logger = "0.10"
colored = "2.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }

[lib]
name = "nmap"
path = "src/lib.rs"

[[bin]]
name = "nmap-helper"
path = "src/bin/nmap-helper.rs"
